peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/Pool_Audit_Report__c.object-meta.xml
<CustomObject>
    <description>Pool Audit Report object is used to store pools data from InfoLease.</description>
    <label>Pool Audit Report</label>
    <nameField>
        <displayFormat>PAR-{000000000}</displayFormat>
        <label>Pool Audit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Audit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>