peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Date</label>
    <type>Date</type>
</CustomField>