peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Method__c</fullName>
    <description>Adjustment Method could be Percentage, Fixed or Other</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>