peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value__c</fullName>
    <description>Value of the field will be considered as in percentage or specific value like 5% or 10</description>
    <label>Adjustment Value (% or Amount)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>