peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Billing_cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing cycle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>