peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Store pool contract</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Pool Audit Reports</relationshipLabel>
    <relationshipName>Pool_Audit_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>