peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pool Audit Reports (Customer)</relationshipLabel>
    <relationshipName>Pool_Audit_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>