peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pool Audit Reports</relationshipLabel>
    <relationshipName>Pool_Audit_Reports</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>