peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Escalated_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Percentage__c</fullName>
    <label>Escalated Percent</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>