peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Escalated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Rate__c</fullName>
    <label>Escalated Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>