peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Escalation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation Effective Date</label>
    <type>Date</type>
</CustomField>