peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>