peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Pool_Id__c.field-meta.xml
<CustomField>
    <fullName>Pool_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pool Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>