peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Read_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Read_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Read Cycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>