peac_dev/force-app/main/default/objects/Pool_Audit_Report__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>